# meshgraphnet_pytorch

./: README.md  pyproject.toml
configs/: train.yaml
configs/datamodule/: cylinder_flow.yaml  flag_simple.yaml
configs/model/: cfd.yaml  cloth.yaml
example/: eval.ipynb  train.py
meshgraphnet/: __init__.py
meshgraphnet/callbacks/: __init__.py  plots.py  wandb.py
meshgraphnet/data/: __init__.py  datamodule.py  dataset.py
meshgraphnet/model/: mgn.py  networks.py
meshgraphnet/tasks/: CfdSequenceRegressionTask.py  ClothSeqenceRegressionTask.py  __init__.py
meshgraphnet/utils/: common.py  normalization.py
meshgraphnet/visualization/: viz.py
